--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.35.1",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-paper": "^5.1.4",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
