--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,10 +113,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('TheKitchenAssistant.keystore')
+            storePassword 'mohit@123'
+            keyAlias 'TheKitchenAssistant'
+            keyPassword 'mohit@123'
         }
     }
     buildTypes {
